Improved style-sheet.css

--- a/style-sheet.css
+++ b/style-sheet.css
@@ -4,4 +4,11 @@ table {
 
 table, th, td {
     border: 1px solid black;
+	padding: 5px 10px
+}
+td {
+	font-weight: bold
+}
+.ending {
+	color: red
 }
