--- a/style-sheet.css
+++ b/style-sheet.css
@@ -6,6 +6,9 @@ table, th, td {
     border: 1px solid black;
 	padding: 5px 10px
 }
+th {
+	background-color: #AAAACC
+}
 td {
 	font-weight: bold
 }
